feat: parallel-agent batch — kill-credit, client events, Thor tunable, ship restrictions DSL
Five workloads landed via parallel subagents, plus audit-driven follow-ups.

Kill-credit hybrid (ECS source + bus event)
- New PlayerKilledEvent (api/events/arena) — victim + killer + weaponFlag
- EnergySystem caches last negative-delta DamageSource per target, threads
  killer into ChangeTarget.source on the death-edge PrizeSpawnIntent holder
- EnergySystem publishes playerKilled bus event before the BodyPosition guard
  (death is a fact regardless of drop-position availability)
- DeathPrizeSystem reads ct.source() for kill-credited attribution
- EnergySystemKillCreditTest pins ECS source threading + bus publish; new
  lethalThenMinorHit case documents the Subspace-canon divergence from
  "lethal blow wins" — last damager wins for kill-credit attribution

Client EventType orphan publishers
- ClientEvent rewritten as payload class (mirrors AccountEvent shape) with
  accountId placeholder, EntityId playerEntity, sessionId, timestampMillis;
  forTransport / forSession factories
- ConnectionState publishes all four orphan EventTypes at the correct
  lifecycle points (onConnected / onLoggedOn / disconnect / onDisconnected)
- disconnect() publishes sessionEnded with forSession(playerEntity, ...) so
  consumers know which player's session ended (resolves via
  GameSessionClientService with null fallback for pre-login disconnects)
- MainMenuState double-attach removed: ConnectionState owns the
  GameSessionState attach; menu state's clientConnected listener was the
  legacy duplicate path that never fired

Orphan delete
- ShipLightControl deleted: zero callers in main src, replaced functionally
  by LightState which already consumes BodyPosition correctly

Thor projectile launch velocity → typed ThorConfig
- ThorConfig grew a launchVelocity int (Infinity divergence — no Subspace
  [Thor] canon in REFERENCE.md; only inventory + prize + cost rows)
- ThorAdapter mirrors BombAdapter sh